--- a/devel/p5-Date-Manip/Makefile
+++ b/devel/p5-Date-Manip/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.91 2024/11/16 12:04:02 wiz Exp $
+# $NetBSD: Makefile,v 1.92 2025/01/21 01:35:57 wen Exp $
 
-DISTNAME=	Date-Manip-6.95
+DISTNAME=	Date-Manip-6.96
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Date/}
 
