--- a/devel/p5-FileHandle-Fmode/Makefile
+++ b/devel/p5-FileHandle-Fmode/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.22 2024/11/16 12:04:18 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/21 01:51:34 wen Exp $
 #
 
-DISTNAME=	FileHandle-Fmode-0.14
+DISTNAME=	FileHandle-Fmode-0.15
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	10
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=FileHandle/}
 
