--- a/textproc/p5-Pod-Spell/Makefile
+++ b/textproc/p5-Pod-Spell/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.34 2024/11/16 12:06:51 wiz Exp $
+# $NetBSD: Makefile,v 1.35 2025/01/21 02:59:18 wen Exp $
 
-DISTNAME=	Pod-Spell-1.26
+DISTNAME=	Pod-Spell-1.27
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Pod/}
 
