--- a/math/py-asdf_astropy/Makefile
+++ b/math/py-asdf_astropy/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2024/11/11 07:28:39 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/21 09:35:01 adam Exp $
 
-DISTNAME=	asdf-astropy-0.6.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/-/_/}
+DISTNAME=	asdf_astropy-0.7.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/asdf_astropy/}
 
@@ -10,17 +10,18 @@ HOMEPAGE=	https://asdf-astropy.readthedocs.io/en/latest/
 COMMENT=	ASDF serialization support for astropy objects
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=0:../../devel/py-setuptools_scm
-DEPENDS+=	${PYPKGPREFIX}-asdf>=2.13:../../math/py-asdf
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=60:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=3.4:../../devel/py-setuptools_scm
+DEPENDS+=	${PYPKGPREFIX}-asdf>=2.14.4:../../math/py-asdf
+DEPENDS+=	${PYPKGPREFIX}-asdf_coordinates_schemas>=0.3:../../math/py-asdf_coordinates_schemas
 DEPENDS+=	${PYPKGPREFIX}-asdf-standard>=1.1.0:../../math/py-asdf-standard
 DEPENDS+=	${PYPKGPREFIX}-asdf-transform-schemas>=0.5:../../math/py-asdf-transform-schemas
-DEPENDS+=	${PYPKGPREFIX}-asdf_coordinates_schemas>=0.3:../../math/py-asdf_coordinates_schemas
-DEPENDS+=	${PYPKGPREFIX}-astropy>=5.0.4:../../math/py-astropy
-DEPENDS+=	${PYPKGPREFIX}-numpy>0:../../math/py-numpy
+DEPENDS+=	${PYPKGPREFIX}-astropy>=5.2.0:../../math/py-astropy
+DEPENDS+=	${PYPKGPREFIX}-numpy>=1.24:../../math/py-numpy
 DEPENDS+=	${PYPKGPREFIX}-packaging>=19:../../devel/py-packaging
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-doctestplus>=0:../../devel/py-test-doctestplus
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-astropy-header>=0:../../devel/py-test-astropy-header
+TEST_DEPENDS+=	${PYPKGPREFIX}-scipy>0:../../math/py-scipy
+#TEST_DEPENDS+=	${PYPKGPREFIX}-test-astropy>0:../../math/py-test-astropy
 
 USE_LANGUAGES=	# none
 
