--- a/math/py-huggingface-hub/Makefile
+++ b/math/py-huggingface-hub/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2025/01/21 13:28:40 ryoon Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/21 14:10:52 adam Exp $
 
-DISTNAME=	huggingface_hub-0.26.1
-PKGNAME=	${PYPKGPREFIX:S/_/-/}-${DISTNAME}
+DISTNAME=	huggingface_hub-0.27.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/huggingface-hub/}
 
@@ -11,7 +11,6 @@ COMMENT=	The official Python client for the Huggingface Hub
 LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-wheel-[0-9]*:../../devel/py-wheel
 DEPENDS+=	${PYPKGPREFIX}-filelock-[0-9]*:../../devel/py-filelock
 DEPENDS+=	${PYPKGPREFIX}-fsspec>=2023.5.0:../../sysutils/py-fsspec
 DEPENDS+=	${PYPKGPREFIX}-packaging>=20.9:../../devel/py-packaging
@@ -20,13 +19,11 @@ DEPENDS+=	${PYPKGPREFIX}-tqdm>=4.42.1:../../misc/py-tqdm
 DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=3.7.4.3:../../devel/py-typing-extensions
 DEPENDS+=	${PYPKGPREFIX}-yaml>=5.1:../../textproc/py-yaml
 
-USE_LANGUAGES=		# none
-
-INSTALLATION_DIRS=	bin
+USE_LANGUAGES=	# none
 
 post-install:
-	cd ${DESTDIR}${PREFIX}/bin && ${MV} huggingface-cli huggingface-cli-${PYVERSSUFFIX}
+	cd ${DESTDIR}${PREFIX}/bin && \
+	${MV} huggingface-cli huggingface-cli-${PYVERSSUFFIX} || ${TRUE}
 
-.include "../../lang/python/application.mk"
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
