--- a/textproc/lua-markdown/Makefile
+++ b/textproc/lua-markdown/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2020/07/02 13:14:59 nia Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/21 14:35:47 nia Exp $
 
 DISTNAME=	lua-markdown-0.33
 PKGNAME=	${DISTNAME:S/lua-/${LUA_PKGPREFIX}-/1}
@@ -6,7 +6,7 @@ CATEGORIES=	textproc lua
 MASTER_SITES=	${MASTER_SITE_GITHUB:=mpeterv/}
 GITHUB_PROJECT=	markdown
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/mpeterv/markdown
 COMMENT=	Implementation of the Markdown text-to-html markup system in pure Lua
 LICENSE=	mit
