--- a/textproc/lua-utf8/Makefile
+++ b/textproc/lua-utf8/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2023/02/01 12:32:33 nia Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/21 14:35:47 nia Exp $
 
 DISTNAME=	lua-utf8-0.1.5
 PKGNAME=	${DISTNAME:S/lua-/${LUA_PKGPREFIX}-/1}
@@ -6,7 +6,7 @@ CATEGORIES=	textproc lua
 MASTER_SITES=	${MASTER_SITE_GITHUB:=starwing/}
 GITHUB_PROJECT=	luautf8
 
-MAINTAINER=	nia@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/starwing/luautf8
 COMMENT=	UTF-8 module for Lua 5.x
 LICENSE=	mit
