--- a/devel/py-flufl.testing/Makefile
+++ b/devel/py-flufl.testing/Makefile
@@ -1,17 +1,15 @@
-# $NetBSD: Makefile,v 1.5 2022/01/04 20:53:06 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/22 08:11:24 adam Exp $
 
-DISTNAME=	flufl.testing-0.7
+DISTNAME=	flufl.testing-0.8
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=f/flufl.testing/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://gitlab.com/warsaw/flufl.testing/
+HOMEPAGE=	https://gitlab.com/warsaw/flufl.testing
 COMMENT=	Small collection of test tool plugins
 LICENSE=	apache-2.0
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
