--- a/print/dspdfviewer/Makefile
+++ b/print/dspdfviewer/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.70 2024/12/29 15:09:58 adam Exp $
+# $NetBSD: Makefile,v 1.71 2025/01/22 08:29:04 wiz Exp $
 
 DISTNAME=	dspdfviewer-1.15.1
-PKGREVISION=	66
+PKGREVISION=	67
 CATEGORIES=	print
 MASTER_SITES=	${MASTER_SITE_GITHUB:=dannyedel/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -14,18 +14,16 @@ LICENSE=	gnu-gpl-v2
 DEPENDS+=	qt5-qttools>=5.5.1:../../x11/qt5-qttools
 
 USE_LANGUAGES=		c c++
+# required by boost-libs
+USE_CXX_FEATURES+=	c++14
+FORCE_CXX_STD=		c++14
 USE_TOOLS+=		pkg-config
-USE_CMAKE=		yes
-CMAKE_CONFIGURE_ARGS+=		-DBuildTests=OFF
-CONFIGURE_DIRS=		build
-CMAKE_ARG_PATH=		..
+CMAKE_CONFIGURE_ARGS+=	-DBuildTests=OFF
 BUILD_MAKE_FLAGS+=	VERBOSE=1
 
 BUILDLINK_TRANSFORM+=	rm:-Werror
 
-pre-configure:
-	mkdir -p ${WRKSRC}/build
-
+.include "../../devel/cmake/build.mk"
 .include "../../devel/boost-libs/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 BUILDLINK_API_DEPENDS.poppler-qt5+=	poppler-qt5>=0.50.0
