--- a/sysutils/pcmanfm-qt/Makefile
+++ b/sysutils/pcmanfm-qt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.44 2024/11/15 12:52:28 pin Exp $
+# $NetBSD: Makefile,v 1.45 2025/01/22 09:07:13 riastradh Exp $
 
 DISTNAME=	pcmanfm-qt-2.1.0
 CATEGORIES=	sysutils
@@ -31,11 +31,12 @@ DEPENDS+=	lxqt-menu-data-[0-9]*:../../sysutils/lxqt-menu-data
 TOOL_DEPENDS+=	lxqt-build-tools>=2.1.0:../../devel/lxqt-build-tools
 TOOL_DEPENDS+=	qt6-qttools-[0-9]*:../../devel/qt6-qttools
 
-.include "../../x11/qt6-qtbase/buildlink3.mk"
-.include "../../x11/liblxqt/buildlink3.mk"
-.include "../../x11/libfm-qt/buildlink3.mk"
-.include "../../x11/plasma6-layer-shell-qt/buildlink3.mk"
-.include "../../x11/xcb-util-cursor/buildlink3.mk"
-.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../devel/cmake/build.mk"
+
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
+.include "../../x11/libfm-qt/buildlink3.mk"
+.include "../../x11/liblxqt/buildlink3.mk"
+.include "../../x11/plasma6-layer-shell-qt/buildlink3.mk"
+.include "../../x11/qt6-qtbase/buildlink3.mk"
+.include "../../x11/xcb-util-cursor/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
