--- a/lang/swi-prolog-lite/Makefile
+++ b/lang/swi-prolog-lite/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.34 2024/08/25 06:18:58 wiz Exp $
+# $NetBSD: Makefile,v 1.35 2025/01/22 10:17:31 wiz Exp $
 
 .include "Makefile.common"
 
@@ -14,6 +14,8 @@ CMAKE_CONFIGURE_ARGS+=		-DSWIPL_PACKAGES_ARCHIVE=ON
 CMAKE_CONFIGURE_ARGS+=		-DSWIPL_PACKAGES_SSL=ON
 CMAKE_CONFIGURE_ARGS+=		-DSWIPL_PACKAGES_TERM=ON
 CMAKE_CONFIGURE_ARGS+=		-DINSTALL_DOCUMENTATION=ON
+
+BROKEN=				"Incompatible with recent OpenSSL releases"
 
 # Part of swi-prolog-jpl
 CMAKE_CONFIGURE_ARGS+=		-DSWIPL_PACKAGES_JAVA=OFF
