--- a/databases/py-tortoise-orm/Makefile
+++ b/databases/py-tortoise-orm/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2024/12/11 08:29:10 adam Exp $
+# $NetBSD: Makefile,v 1.30 2025/01/22 13:43:39 wiz Exp $
 
 DISTNAME=	tortoise_orm-0.22.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
+PKGREVISION=	1
 CATEGORIES=	databases python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/tortoise-orm/}
 
@@ -10,7 +11,7 @@ HOMEPAGE=	https://github.com/tortoise/tortoise-orm
 COMMENT=	Easy async ORM for Python, built with relations in mind
 LICENSE=	apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=1.0.0:../../devel/py-poetry-core
+TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=2.0.0:../../devel/py-poetry-core
 DEPENDS+=	${PYPKGPREFIX}-aiosqlite>=0.16.0:../../databases/py-aiosqlite
 DEPENDS+=	${PYPKGPREFIX}-iso8601>=2.1.0:../../time/py-iso8601
 DEPENDS+=	${PYPKGPREFIX}-pypika-tortoise>=0.3.0:../../databases/py-pypika-tortoise
