--- a/ham/xlog/Makefile
+++ b/ham/xlog/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.114 2024/12/27 08:20:07 wiz Exp $
+# $NetBSD: Makefile,v 1.115 2025/01/22 17:49:17 gdt Exp $
 #
 
 DISTNAME=	xlog-2.0.25
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	ham
 MASTER_SITES=	https://download.savannah.gnu.org/releases/xlog/
 LICENSE=	gnu-gpl-v3
